--- a/index.css
+++ b/index.css
@@ -10,13 +10,33 @@
 /* Flex container */
 /* Flex darection */
 
-.flex-container{
+/* .flex-container{
     display: flex;
     background-color: dodgerblue;
+    flex-direction: column;
 }
 
 .flex-container div{
     width: 300px;
+    padding: 50px;
+    background-color: cadetblue;
+    margin: 10px;
+} */
+
+
+
+
+
+.flex-container{
+    display: flex;
+    background-color: dodgerblue;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.flex-container div{
+    width: 300px;
+    height: 200px;
     padding: 50px;
     background-color: cadetblue;
     margin: 10px;
