--- a/index.css
+++ b/index.css
@@ -26,12 +26,30 @@
 
 
 
-
+/* 
 .flex-container{
     display: flex;
     background-color: dodgerblue;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+.flex-container div{
+    width: 300px;
+    height: 200px;
+    padding: 50px;
+    background-color: cadetblue;
+    margin: 10px;
+} */
+
+
+
+
+.flex-container{
+    display: flex;
+    background-color: dodgerblue;
+    justify-content: flex-start;
+
 }
 
 .flex-container div{
